<?xml version="1.0"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.0.1</version>
  <description>MQTT to ROS2 Bridge Node using Paho MQTT</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>paho-mqttpp3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      share/mqtt_bridge/launch
    </launch>
  </export>
</package>
